apps/pi-hole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pi-hole
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.88.192
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
