apps/pi-hole/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pi-hole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: http
